--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,8 @@ button:focus{
 -------------------------------------------------------------------*/
 
 .main-top{
-	background: #12557f;
+	/* background: #12557f; */
+	background: #A44289;
 }
 .left-top a{
 	display: inline-block;
@@ -336,7 +337,8 @@ button:focus{
 
 
 .top-header .navbar .navbar-collapse ul li a.active{
-	background: #00cb86;
+	/* background: #00cb86; */
+	background: #00548B;
 	color: #ffffff;
 	-webkit-transition: all 0.5s ease-in-out 0s;
 	-moz-transition: all 0.5s ease-in-out 0s;
@@ -369,7 +371,8 @@ button:focus{
 	transition: all 0.5s ease-in-out 0s;
 }
 .top-header .navbar .navbar-collapse ul li a:hover{
-	background: #00cb86;
+	/* background: #00cb86; */
+	background: #00548B;
 	color: #ffffff;
 }
 
@@ -418,11 +421,13 @@ button:focus{
 }
 
 .navbar-toggler:hover{
-	border: 1px solid #00cb86;
+	/* border: 1px solid #00cb86; */
+	border: 1px solid #00548B;
 }
 
 .navbar-toggler:hover span{
-	background: #00cb86;
+	/* background: #00cb86; */
+	background: #00548B;
 }
 
 
