--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ button:focus{
 }
 
 .form-control::-moz-placeholder {
-    color: #12557f;
+    color: #A44289;
     opacity: 1;
 	/*--*/
 }
@@ -206,7 +206,7 @@ button:focus{
 -------------------------------------------------------------------*/
 
 .main-top{
-	/* background: #12557f; */
+	/* background: #A44289; */
 	background: #A44289;
 }
 .left-top a{
@@ -257,7 +257,7 @@ button:focus{
 }
 
 .new-btn-d::after {
-    background: #00cb86;
+    background: #00548B;
 }
 .new-btn-d:hover::after {
     -webkit-transition-delay: 0.175s;
@@ -278,8 +278,8 @@ button:focus{
 	border: 2px solid #ffffff;
 }
 .mail-b a:hover{
-	color: #00cb86;
-	border: 2px solid #00cb86;
+	color: #00548B;
+	border: 2px solid #00548B;
 }
 
 .right-top{
@@ -297,7 +297,7 @@ button:focus{
 	border: 2px solid #ffffff;
 }
 .right-top ul li a:hover{
-	background: #00cb86;
+	background: #00548B;
 	color: #ffffff;
 }
 
@@ -338,7 +338,7 @@ button:focus{
 
 
 .top-header .navbar .navbar-collapse ul li a.active{
-	/* background: #00cb86; */
+	/* background: #00548B; */
 	background: #00548B;
 	color: #ffffff;
 	-webkit-transition: all 0.5s ease-in-out 0s;
@@ -372,7 +372,7 @@ button:focus{
 	transition: all 0.5s ease-in-out 0s;
 }
 .top-header .navbar .navbar-collapse ul li a:hover{
-	/* background: #00cb86; */
+	/* background: #00548B; */
 	background: #00548B;
 	color: #ffffff;
 }
@@ -422,12 +422,12 @@ button:focus{
 }
 
 .navbar-toggler:hover{
-	/* border: 1px solid #00cb86; */
+	/* border: 1px solid #00548B; */
 	border: 1px solid #00548B;
 }
 
 .navbar-toggler:hover span{
-	/* background: #00cb86; */
+	/* background: #00548B; */
 	background: #00548B;
 }
 
@@ -501,12 +501,12 @@ button:focus{
 	z-index: 3;
 }
 .lbox-details p strong{
-	color: #00cb86;
+	color: #00548B;
 	font-size: 40px;
 	font-family: 'Catamaran', sans-serif;
 }
 .lbox-details a.btn{
-	background: #12557f;
+	background: #A44289;
 	padding: 10px 20px;
 	font-size: 20px;
 	text-transform: capitalize;
@@ -518,7 +518,7 @@ button:focus{
 	z-index: 3;
 }
 .lbox-details a.btn:hover{
-	background: #00cb86;
+	background: #00548B;
 	color: #ffffff;
 }
 
@@ -531,7 +531,7 @@ button:focus{
 .tooltip-1 {
 	display: inline-block;
 	position: relative;
-	color: #00cb86;
+	color: #00548B;
 	opacity: 1;
 }
 
@@ -587,7 +587,7 @@ button:focus{
 }
 
 .title-box h2 span{
-	color: #00cb86;
+	color: #00548B;
 	text-decoration: underline;
 }
 .about-main-info h2{
@@ -595,7 +595,7 @@ button:focus{
 	font-family: 'Catamaran', sans-serif;
 }
 .about-main-info h2 span{
-	color: #00cb86;
+	color: #00548B;
 	text-decoration: underline;
 }
 .about-main-info{
@@ -603,7 +603,7 @@ button:focus{
 }
 
 .about-m{
-	border: 2px solid #00cb86;
+	border: 2px solid #00548B;
 	box-shadow: 0 10px 25px 0 rgba(0,0,40,.2);
 }
 
@@ -680,13 +680,13 @@ button:focus{
 	letter-spacing: 1px;
 	padding: 10px 18px;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	display: inline-block;
 	line-height: 24px;
 }
 
 .about-main-info a.new-btn-d.br-2{
-	border: 2px solid #12557f;
+	border: 2px solid #A44289;
 }
 
 .about-main-info a.new-btn-d::before{
@@ -754,7 +754,7 @@ button:focus{
     position: relative;
     transition: all 0.3s ease 0s;
 }
-.serviceBox:hover{ border-color: #00cb86 ; }
+.serviceBox:hover{ border-color: #00548B ; }
 .serviceBox:before{
     content: "";
     border-top: 20px solid #16567f;
@@ -765,7 +765,7 @@ button:focus{
     right: 7px;
     transition: all 0.3s ease 0s;
 }
-.serviceBox:hover:before{ border-top-color: #00cb86 ; }
+.serviceBox:hover:before{ border-top-color: #00548B ; }
 .serviceBox .service-icon{
     display: inline-block;
     width: 80px;
@@ -793,8 +793,8 @@ button:focus{
     transition: all 0.3s ease 0s;
 }
 .serviceBox:hover .service-icon:before{
-    border-color: #00cb86 ;
-    background: #00cb86 ;
+    border-color: #00548B ;
+    background: #00548B ;
 }
 .serviceBox .title{
     font-size: 20px;
@@ -820,13 +820,13 @@ button:focus{
 	letter-spacing: 1px;
 	padding: 10px 18px;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	display: inline-block;
 	line-height: 12px;
 }
 
 .serviceBox a.new-btn-d.br-2{
-	border: 2px solid #12557f;
+	border: 2px solid #A44289;
 }
 .serviceBox a:hover{
 	color: #ffffff;
@@ -843,37 +843,37 @@ button:focus{
 	margin-top: 20px;
 }
 .services-box .owl-carousel .owl-nav .owl-prev{
-	border: 2px solid #12557f;
+	border: 2px solid #A44289;
 	border-radius: 2px;
 	transition: .2s;
 	letter-spacing: 1px;
 	padding: 10px 18px !important;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	display: inline-block;
 	line-height: 12px;
 	font-size: 34px;
 	margin: 0 10px;
 }
 .services-box .owl-carousel .owl-nav .owl-prev:hover{
-	background: #00cb86;
+	background: #00548B;
 	color: #ffffff;
 }
 .services-box .owl-carousel .owl-nav .owl-next{
-	border: 2px solid #12557f;
+	border: 2px solid #A44289;
 	border-radius: 2px;
 	transition: .2s;
 	letter-spacing: 1px;
 	padding: 10px 18px !important;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	display: inline-block;
 	line-height: 12px;
 	font-size: 34px;
 	margin: 0 10px;
 }
 .services-box .owl-carousel .owl-nav .owl-next:hover{
-	background: #00cb86;
+	background: #00548B;
 	color: #ffffff;
 }
 
@@ -901,8 +901,8 @@ button:focus{
 	min-height: 50px;
 	padding: 0px 15px;
 	border-radius: 0;
-	color: #12557f;
-	border: 1px solid #12557f;
+	color: #A44289;
+	border: 1px solid #A44289;
 }
 .well-block form .form-group .form-control:focus{
 	box-shadow: none;
@@ -914,13 +914,13 @@ button:focus{
 	letter-spacing: 1px;
 	padding: 10px 18px;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	display: inline-block;
 	line-height: 24px;
 	cursor: pointer;
 }
 .well-block form .form-group button.new-btn-d.br-2 {
-    border: 2px solid #12557f;
+    border: 2px solid #A44289;
 }
 .well-block form .form-group button.new-btn-d::before {
     background: rgba(18,85,127,0.2);
@@ -975,14 +975,14 @@ button:focus{
     transition: all 0.6s ease 0.3s;
 }
 .box-gallery .box-content:before{
-    border-left: 2px solid #00cb86;
-    border-top: 2px solid #00cb86;
+    border-left: 2px solid #00548B;
+    border-top: 2px solid #00548B;
     top: 19px;
     left: 19px;
 }
 .box-gallery .box-content:after{
-    border-bottom: 2px solid #00cb86;
-    border-right: 2px solid #00cb86;
+    border-bottom: 2px solid #00548B;
+    border-right: 2px solid #00548B;
     bottom: 19px;
     right: 19px;
 }
@@ -1009,7 +1009,7 @@ button:focus{
     content: "";
     width: 0;
     height: 2px;
-    background: #00cb86;
+    background: #00548B;
     position: absolute;
     bottom: -8px;
     left: 0;
@@ -1048,12 +1048,12 @@ button:focus{
     border-radius: 50%;
     font-size: 18px;
     color: #000;
-    border: 2px solid #12557f;
+    border: 2px solid #A44289;
     margin-right: 5px;
     transition: all 0.3s ease-in-out 0s;
 }
 .box-gallery .icon li a:hover{
-    background: #00cb86;
+    background: #00548B;
     color: #fff;
 }
 @media only screen and (max-width:990px){
@@ -1080,7 +1080,7 @@ button:focus{
     content: "";
     width: 130px;
     height: 130px;
-    background: #12557f;
+    background: #A44289;
     position: absolute;
 	border-radius: 50%;
     z-index: -1;
@@ -1096,17 +1096,17 @@ button:focus{
 .our-team .pic{
     margin: 8px;
     position: relative;
-    border: 3px solid #00cb86;
+    border: 3px solid #00548B;
     transition: all 0.5s ease 0s;
 }
 .our-team:hover .pic{
-    border-color: #12557f;
+    border-color: #A44289;
 }
 .our-team .pic:after{
     content: "";
     width: 100%;
     height: 0;
-    background: #00cb86;
+    background: #00548B;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -1167,7 +1167,7 @@ button:focus{
 }
 .our-team .social li a:hover{
     background: #fff;
-    color: #12557f;
+    color: #A44289;
 }
 @media only screen and (max-width: 990px){
     .our-team{ margin-bottom: 30px; }
@@ -1211,14 +1211,14 @@ button:focus{
 	letter-spacing: 1px;
 	padding: 10px 18px;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	font-size: 14px;
 	display: inline-block;
 	line-height: 24px;
 }
 
 .blog-inner a.new-btn-d.br-2{
-	border: 2px solid #12557f;
+	border: 2px solid #A44289;
 }
 
 .blog-inner a.new-btn-d::before{
@@ -1231,17 +1231,17 @@ button:focus{
 }
 
 .blog-inner .item-meta{
-	background: #12557f;
+	background: #A44289;
 }
 .blog-inner .item-meta a{
-	background: #12557f;
+	background: #A44289;
 	color: #ffffff;
 	display: inline-block;
 	border: none;
 }
 .blog-inner .item-meta span{
 	color: #ffffff;
-	background: #00cb86;
+	background: #00548B;
 	display: inline-block;
 	padding: 5px;
 }
@@ -1280,9 +1280,9 @@ button:focus{
 	text-align: center;
 	line-height: 80px;
 	font-size: 40px;
-	border: 2px dotted #12557f;
+	border: 2px dotted #A44289;
 	margin-right: 10px;
-	color: #00cb86;
+	color: #00548B;
 	border-radius: 50%;
 }
 
@@ -1304,13 +1304,13 @@ button:focus{
 	color: #333333
 }
 .dit-right a:hover{
-	color: #00cb86;
+	color: #00548B;
 }
 
 .contact-block{}
 
 .contact-block .form-group .form-control{
-	background: #00cb86;
+	background: #00548B;
 	height: 45px;
 	font-size: 16px;
 	border: 0;
@@ -1331,7 +1331,7 @@ button:focus{
 }
 
 .submit-button .btn-common{
-	background-color: #00cb86;
+	background-color: #00548B;
 	height: 45px;
 	line-height: 45px;
 	font-size: 16px;
@@ -1376,7 +1376,7 @@ select.form-control:not([size]):not([multiple]){
 }
 
 .footer-box .footer-company-name a{
-	color: #00cb86;
+	color: #00548B;
 }
 .footer-box .footer-company-name a:hover{
 	color: #000000;
@@ -1435,7 +1435,7 @@ select.form-control:not([size]):not([multiple]){
 	letter-spacing: 1px;
 	padding: 10px 18px;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	display: inline-block;
 	line-height: 24px;
 	border: none;
@@ -1443,7 +1443,7 @@ select.form-control:not([size]):not([multiple]){
 }
 
 .subscribe-inner .form-group button.new-btn-d.br-2 {
-    border: 2px solid #12557f;
+    border: 2px solid #A44289;
 }
 .subscribe-inner .form-group button.new-btn-d::before{
 	background: rgba(18,85,127,0.2);
