--- a/css/style.css
+++ b/css/style.css
@@ -818,13 +818,13 @@ button:focus{
 	letter-spacing: 1px;
 	padding: 10px 18px;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	display: inline-block;
 	line-height: 12px;
 }
 
 .serviceBox a.new-btn-d.br-2{
-	border: 2px solid #12557f;
+	border: 2px solid #A44289;
 }
 .serviceBox a:hover{
 	color: #ffffff;
@@ -841,13 +841,13 @@ button:focus{
 	margin-top: 20px;
 }
 .services-box .owl-carousel .owl-nav .owl-prev{
-	border: 2px solid #12557f;
+	border: 2px solid #A44289;
 	border-radius: 2px;
 	transition: .2s;
 	letter-spacing: 1px;
 	padding: 10px 18px !important;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	display: inline-block;
 	line-height: 12px;
 	font-size: 34px;
@@ -858,13 +858,13 @@ button:focus{
 	color: #ffffff;
 }
 .services-box .owl-carousel .owl-nav .owl-next{
-	border: 2px solid #12557f;
+	border: 2px solid #A44289;
 	border-radius: 2px;
 	transition: .2s;
 	letter-spacing: 1px;
 	padding: 10px 18px !important;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	display: inline-block;
 	line-height: 12px;
 	font-size: 34px;
@@ -1046,7 +1046,7 @@ button:focus{
     border-radius: 50%;
     font-size: 18px;
     color: #000;
-    border: 2px solid #12557f;
+    border: 2px solid #A44289;
     margin-right: 5px;
     transition: all 0.3s ease-in-out 0s;
 }
@@ -1078,7 +1078,7 @@ button:focus{
     content: "";
     width: 130px;
     height: 130px;
-    background: #12557f;
+    background: #A44289;
     position: absolute;
 	border-radius: 50%;
     z-index: -1;
@@ -1098,7 +1098,7 @@ button:focus{
     transition: all 0.5s ease 0s;
 }
 .our-team:hover .pic{
-    border-color: #12557f;
+    border-color: #A44289;
 }
 /* .our-team .pic:after{
     content: "";
@@ -1165,7 +1165,7 @@ button:focus{
 }
 .our-team .social li a:hover{
     background: #fff;
-    color: #12557f;
+    color: #A44289;
 }
 @media only screen and (max-width: 990px){
     .our-team{ margin-bottom: 30px; }
@@ -1209,14 +1209,14 @@ button:focus{
 	letter-spacing: 1px;
 	padding: 10px 18px;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	font-size: 14px;
 	display: inline-block;
 	line-height: 24px;
 }
 
 .blog-inner a.new-btn-d.br-2{
-	border: 2px solid #12557f;
+	border: 2px solid #A44289;
 }
 
 .blog-inner a.new-btn-d::before{
@@ -1229,10 +1229,10 @@ button:focus{
 }
 
 .blog-inner .item-meta{
-	background: #12557f;
+	background: #A44289;
 }
 .blog-inner .item-meta a{
-	background: #12557f;
+	background: #A44289;
 	color: #ffffff;
 	display: inline-block;
 	border: none;
@@ -1278,9 +1278,9 @@ button:focus{
 	text-align: center;
 	line-height: 80px;
 	font-size: 40px;
-	border: 2px dotted #12557f;
+	border: 2px dotted #A44289;
 	margin-right: 10px;
-	color: #00548B;
+	color: #A44289;
 	border-radius: 50%;
 }
 
@@ -1305,7 +1305,7 @@ button:focus{
 	color: #00548B;
 }
 
-.contact-block{}
+/* .contact-block{} */
 
 .contact-block .form-group .form-control{
 	background: #A44289;
@@ -1329,7 +1329,7 @@ button:focus{
 }
 
 .submit-button .btn-common{
-	background-color: #00548B;
+	background-color: #A44289;
 	height: 45px;
 	line-height: 45px;
 	font-size: 16px;
@@ -1347,7 +1347,7 @@ button:focus{
 	transition: all 0.3s;
 }
 .submit-button .btn-common:hover{
-	background-color: #528780;
+	background-color: #e99dd3;
 }
 
 .custom-select{
@@ -1374,7 +1374,7 @@ select.form-control:not([size]):not([multiple]){
 }
 
 .footer-box .footer-company-name a{
-	color: #00548B;
+	color: #A44289;
 }
 .footer-box .footer-company-name a:hover{
 	color: #000000;
@@ -1433,7 +1433,7 @@ select.form-control:not([size]):not([multiple]){
 	letter-spacing: 1px;
 	padding: 10px 18px;
 	background: #ffffff;
-	color: #12557f;
+	color: #A44289;
 	display: inline-block;
 	line-height: 24px;
 	border: none;
@@ -1441,7 +1441,7 @@ select.form-control:not([size]):not([multiple]){
 }
 
 .subscribe-inner .form-group button.new-btn-d.br-2 {
-    border: 2px solid #12557f;
+    border: 2px solid #A44289;
 }
 .subscribe-inner .form-group button.new-btn-d::before{
 	background: rgba(18,85,127,0.2);
@@ -1500,7 +1500,7 @@ select.form-control:not([size]):not([multiple]){
 	padding: 10px;
 	background: transparent;
 	/* puedo colocar otro color pero con transparencia asi: background: rgba(0,0,0,0.1) porque sino no se ven las label, aunque ya no es necesario porque ya no estan sobre los input y ademas le quite el z-index*/
-	border: 1px solid rgba(0, 0, 0, 0.3);
+	border: 1px solid #A44289;
 	margin-bottom: 15px;
 	border-radius: 10px;
   }
@@ -1522,7 +1522,7 @@ select.form-control:not([size]):not([multiple]){
 	margin: 2px;
   }
   .formulario__submit {
-	background: rgba(0, 0, 0, 0.7);
+	background: #A44289;
 	color: white;
 	padding: 10px 20px;
 	cursor: pointer;
